--- a/prereq/templates/named.conf
+++ b/prereq/templates/named.conf
@@ -10,13 +10,13 @@
 // configuration located in /usr/share/doc/bind-{version}/Bv9ARM.html
 
 options {
-	listen-on port 53 { 127.0.0.1; 192.168.122.26; };
+	listen-on port 53 { 127.0.0.1; 192.168.122.93; };
 	listen-on-v6 port 53 { ::1; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
 	statistics-file "/var/named/data/named_stats.txt";
 	memstatistics-file "/var/named/data/named_mem_stats.txt";
-	allow-query     { localhost; 192.168.122.0/24; };
+//	allow-query     { localhost; 192.168.122.0/24; };
 
 	/* 
 	 - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
