--- a/prereq/templates/named.conf
+++ b/prereq/templates/named.conf
@@ -16,7 +16,7 @@ options {
 	dump-file 	"/var/named/data/cache_dump.db";
 	statistics-file "/var/named/data/named_stats.txt";
 	memstatistics-file "/var/named/data/named_mem_stats.txt";
-	allow-query     { localhost; 192.168.122.0/24; };
+//	allow-query     { localhost; 192.168.122.0/24; };
 
 	/* 
 	 - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
