--- a/prereq/oso_play.yml
+++ b/prereq/oso_play.yml
@@ -9,6 +9,7 @@
       - net-tools
       - wget
       - telnet
+      - httpd-tools
   - name: Install DNS server packages
     yum: pkg={{item}} state=latest
     with_items:
